--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content:flex-start;
     height: 100vh;
     gap: 25px;
     flex-direction: column;
@@ -19,9 +18,12 @@ body {
 }
 
 .sketch-container {
-    width: 40vw;
-    height: 60vh;
+    flex-direction: column;
+    width: 600px;
+    height: 600px;
     outline: 1px solid red;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .options-container {
