--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,51 @@
-body {
+* {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    text-align: center;
+}
+
+body, html {
     margin: 0;
     padding: 0;
+}
+
+body {
+    width: 100vw;
     box-sizing: border-box;
+    /* overflow: hidden; */
     display: flex;
     align-items: center;
-    height: 100vh;
-    gap: 25px;
     flex-direction: column;
+    background-color: rgb(214, 214, 214);
 }
 
 .game-container {
-    outline: 1px solid blue;
+    display: flex;
+    margin-top: auto;
+}
+
+button {
+    width: 150px;
+    padding: 5px 15px;
+    border-radius: 5px;
+    box-shadow: 1px 2px 5px;
+}
+
+.game-container {
     display: flex;
     align-items: center;
     gap: 50px;
     padding: 15px;
+    margin-bottom: auto;
 }
 
 .sketch-container {
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 5px 5px 10px;
+    border: 15px solid gray;
     flex-direction: column;
     width: 600px;
     height: 600px;
-    outline: 1px solid red;
     display: flex;
     flex-wrap: wrap;
 }
@@ -30,16 +54,22 @@ body {
     border-radius: 10px;
     box-shadow: 5px 5px 10px;
     background-color: gray;
-    width: 10vw;
-    height: 40vh;
+    width: 12vw;
     gap: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.options-container > p {
+    font-weight: bold;
+    font-size: large;
+    margin-top: 40px;
 }
 
 .slider-container {
+    gap: 15px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     width: inherit;
@@ -48,22 +78,75 @@ body {
     flex-direction: column;
     align-items: center;
 }
+#block-number {
+    margin-top: 10px;
+}
 
-.buttons-container {
+.slider-container > p {
+    margin: 0;
+}
+
+.color-buttons, .buttons-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    align-items: center;
 }
 
-h1 {
-    margin-top: 80px;
-    margin-bottom: 75px;
-}
-
-.options-container > p {
-    margin-top: 40px;
+#header {
+    margin: 0;
+    padding: 15px 0;
+    width: 100vw;
+    display: flex;
+    top: 0;
+    background-color: rgb(0, 0, 0) ;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 55px;
 }
 
 .clicked {
     background-color: cadetblue;
 }
+
+#grid-slider {
+    margin-bottom: 15px;
+    -webkit-appearance: none;
+     appearance: none;
+     width: 80%;
+     height: 15px;
+     background: #d3d3d3;
+     outline: none;
+     opacity: 0.7; 
+     -webkit-transition: .2s;
+     transition: opacity .2s;
+}
+
+#grid-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px; 
+    height: 25px;
+    background: #04AA6D; 
+    cursor: pointer;
+  }
+  
+
+  @media screen and (max-height: 800px){
+    .sketch-container {
+        height: 400px;
+        width: 400px;
+    }
+    .options-container{
+        height: 430px;
+        align-items: center;
+        justify-content: center;
+    }
+  }
+
+  @media (max-width: 1500px) {
+    button {
+        width: 100px;
+    }
+  }
